# sipi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config-example.toml  config.toml  format.sh
cmake/: ClangToolchain.cmake  CompilerWarnings.cmake  FindFFmpeg.cmake  FindX11.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  VCEnvironment.cmake  clang-format.cmake
scripts/: test_baresip.sh
src/: CallContext.cpp  CallContext.hpp  CallManager.cpp  CallManager.hpp  CallSession.cpp  CallSession.hpp  CallStateMachine.hpp  Events.hpp  ICallContext.hpp  RtpSession.cpp  RtpSession.hpp  SdpNegotiator.cpp  SdpNegotiator.hpp  Settings.cpp  Settings.hpp  SipEndpoint.cpp  SipEndpoint.hpp  SipModule.cpp  SipModule.hpp  SipResponder.cpp  SipResponder.hpp  SipStatusCodes.hpp  main.cpp  pch.hpp
src/call/: CallContext.cpp  CallContext.hpp  CallManager.cpp  CallManager.hpp  CallSession.cpp  CallSession.hpp  CallStateMachine.hpp  Events.hpp  ICallContext.hpp
src/rtp/: PayloadTypes.hpp  RtpPacket.hpp  RtpSession.cpp  RtpSession.hpp  endianness.hpp
src/sip/: SdpNegotiator.cpp  SipEndpoint.cpp  SipEndpoint.hpp  SipModule.cpp  SipModule.hpp  SipResponder.cpp  SipRouter.cpp  SipRouter.hpp
src/utils/: assert.hpp  error.hpp  log.hpp
tests/: CMakeLists.txt  test_call_state_machine.cpp  test_rtp_session.cpp  test_sdp_negotiator.cpp
